fix intro banner on mobile, remove border radius from contact form

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -52,6 +52,7 @@ $light_grey: #f5f5f5;
 
     background: transparent;
     border: none;
+    border-radius: 0px;
     border-bottom: 2px solid $medium_grey;
     outline: none;
 
@@ -80,6 +81,7 @@ $light_grey: #f5f5f5;
 
     background: transparent;
     border: none;
+    border-radius: 0px;
     border-bottom: 2px solid $medium_grey;
     outline: none;
   }
